WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38932
wx port: activate handler not being run correctly
https://bugs.webkit.org/show_bug.cgi?id=38932
Summary
wx port: activate handler not being run correctly
Kevin Watters
Reported
2010-05-11 13:06:04 PDT
Created
attachment 55742
[details]
load about:blank on creation to initialize objects Because on wxWebView creation there isn't a focusController yet, wxEVT_ACTIVATE fails to fire in some situations.
Attachments
load about:blank on creation to initialize objects
(1.06 KB, patch)
2010-05-11 13:06 PDT
,
Kevin Watters
kevino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
WebKit Review Bot
Comment 1
2010-05-11 17:12:16 PDT
http://trac.webkit.org/changeset/59184
might have broken GTK Linux 32-bit Release The following changes are on the blame list:
http://trac.webkit.org/changeset/59184
http://trac.webkit.org/changeset/59185
Kevin Ollivier
Comment 2
2010-05-11 17:26:09 PDT
Landed in
r59184
, thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug