Reviewed by Kevin Ollivier.

Load a blank page on creation to initialize WebCore objects properly.
https://bugs.webkit.org/show_bug.cgi?id=38932



Canonical link: https://commits.webkit.org/50422@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59184 268f45cc-cd09-0410-ab3c-d52691b4dbfc